Gestion des erreurs par redirection du une page automatique